@@ -13,6 +13,7 @@
 	var ctrack=require("ctrack");
 	var data=ctrack.get_chart_data("data_chart_donors");
 	var opts={
+		layout:"right",
 		width:380,
 		height:300,
 		center_x:190,
@@ -28,7 +29,6 @@
 //			back:[255,255,255,1],
 			border:[0.5,0.5,0.5,1],
 		},
-		layout:"five",
 	}
-	ctrack.draw_chart("#view_test_graph",data,{});
+	ctrack.draw_chart("#view_test_graph",data,opts);
 </script>
