@@ -5,6 +5,7 @@ Changed description for Source title and hover states in table
 Changed Publishers to Agents (not internal yet)
 Added "Back to {country_name}" to Stats pages
 Added new query example to about page
+Added accessibility "tabbed keyboard" 
 
 
 Development Portal (2014-04-01 shi)
